# windeployqt

./: README.md  pyproject.toml
windeployqt/: deploy.py  desktop.py  hello.py  main.py
