[project]
name = "windeployqt"
version = "2025.2.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = ["build", "twine"]
[project.urls]
Repository = "https://github.com/soda92/windeployqt"

[project.scripts]
windeployqt = "windeployqt.hello:main2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["windeployqt"]

[tool.hatch.build.targets.wheel]
packages = ["windeployqt"]
