[project]
name = "windeployqt"
version = "2025.2.3.3"
description = "deploy Qt app using MSYS2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pywin32>=308",
]

[dependency-groups]
dev = ["build", "twine"]
[project.urls]
Repository = "https://github.com/soda92/windeployqt"

[project.scripts]
windeployqt = "windeployqt.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["windeployqt"]

[tool.hatch.build.targets.wheel]
packages = ["windeployqt"]
